[gd_scene load_steps=8 format=3 uid="uid://dcs88iy8cie3"]

[ext_resource type="PackedScene" uid="uid://cwyyg27diiayw" path="res://tscn_files/player.tscn" id="1_7025w"]
[ext_resource type="Script" path="res://tscn_files/level_6.gd" id="1_tsc8t"]
[ext_resource type="PackedScene" uid="uid://b0w5t6ly2ty46" path="res://tscn_files/HUD.tscn" id="2_52suh"]
[ext_resource type="PackedScene" path="res://tscn_files/next_button.tscn" id="3_r2xtt"]
[ext_resource type="AudioStream" uid="uid://cri0hma24v7yp" path="res://game_music/prelude_no_1.mp3" id="4_qi55i"]
[ext_resource type="TileSet" uid="uid://ck318a36xt8cb" path="res://tscn_files/level_3.tres" id="5_0o5e0"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_2mot6"]
size = Vector2(81.814, 701)

[node name="Node2D" type="Node2D"]
script = ExtResource("1_tsc8t")

[node name="TileMap" type="TileMap" parent="."]
modulate = Color(1, 1, 1, 0.435294)
tile_set = ExtResource("5_0o5e0")
format = 2
layer_0/tile_data = PackedInt32Array(0, 131072, 65536, 1, 131072, 65536, 2, 131072, 65536, 3, 131072, 65536, 4, 131072, 65536, 5, 131072, 65536, 6, 131072, 65536, 7, 131072, 65536, 8, 131072, 65536, 9, 131072, 65536, 10, 131072, 65536, 65546, 131072, 65536, 131082, 131072, 65536, 196618, 131072, 65536, 262154, 131072, 65536, 327690, 131072, 65536, 393226, 131072, 65536, 393227, 131072, 65536, 327691, 131072, 65536, 262155, 131072, 65536, 196619, 131072, 65536, 131083, 131072, 65536, 65547, 131072, 65536, 11, 131072, 65536, 131081, 131072, 65536, 131080, 131072, 65536, 131079, 131072, 65536, 131078, 131072, 65536, 131077, 131072, 65536, 65540, 131072, 65536, 65539, 131072, 65536, 65538, 131072, 65536, 65537, 131072, 65536, 65536, 131072, 65536, 65541, 131072, 65536, 65542, 131072, 65536, 65543, 131072, 65536, 65544, 131072, 65536, 65545, 131072, 65536, 262153, 131072, 65536, 262152, 131072, 65536, 262151, 131072, 65536, 262150, 131072, 65536, 262149, 131072, 65536, 327685, 131072, 65536, 327684, 131072, 65536, 327683, 131072, 65536, 327682, 131072, 65536, 327681, 131072, 65536, 327680, 131072, 65536, 393216, 131072, 65536, 393217, 131072, 65536, 393218, 131072, 65536, 393219, 131072, 65536, 393220, 131072, 65536, 393221, 131072, 65536, 393222, 131072, 65536, 393223, 131072, 65536, 393224, 131072, 65536, 393225, 131072, 65536, 327689, 131072, 65536, 327688, 131072, 65536, 327687, 131072, 65536, 327686, 131072, 65536, 262147, 131072, 65536, 262146, 131072, 65536, 262145, 131072, 65536, 196609, 131072, 65536, 196608, 131072, 65536, 131072, 131072, 65536, 262144, 131072, 65536, 131073, 131072, 65536, 131074, 131072, 65536, 131075, 131072, 65536, 131076, 131072, 65536, 196611, 131072, 65536, 196610, 131072, 65536, 196612, 131072, 65536, 196613, 131072, 65536, 196614, 131072, 65536, 196615, 131072, 65536, 196616, 131072, 65536, 196617, 131072, 65536, 262148, 131072, 65536)

[node name="Player" parent="." instance=ExtResource("1_7025w")]
position = Vector2(586, 446)

[node name="Timer" type="Timer" parent="."]
wait_time = 8.0
autostart = true

[node name="HUD" parent="." instance=ExtResource("2_52suh")]
start_text = "A dream"

[node name="Music" type="AudioStreamPlayer" parent="."]
stream = ExtResource("4_qi55i")
autoplay = true

[node name="left" type="Area2D" parent="."]
position = Vector2(1.58527, 212.882)
collision_layer = 256
collision_mask = 0

[node name="CollisionShape2D" type="CollisionShape2D" parent="left"]
position = Vector2(-1.29263, 114.618)
shape = SubResource("RectangleShape2D_2mot6")

[node name="right" type="Area2D" parent="."]
position = Vector2(1141.81, 250.68)
collision_layer = 512
collision_mask = 0

[node name="CollisionShape2D" type="CollisionShape2D" parent="right"]
position = Vector2(-30.907, 114.618)
shape = SubResource("RectangleShape2D_2mot6")

[node name="oldman_timer" type="Timer" parent="."]
wait_time = 8.0
one_shot = true

[node name="finalboss_timer" type="Timer" parent="."]
wait_time = 8.0
one_shot = true

[node name="next_button" parent="." instance=ExtResource("3_r2xtt")]
visible = false
offset_left = 950.0
offset_top = 525.0
offset_right = 1113.0
offset_bottom = 615.0
disabled = true
text = "Next"
next_scene = "res://tscn_files/option_screen.tscn"

[connection signal="is_dead" from="Player" to="." method="_on_player_is_dead"]
[connection signal="timeout" from="Timer" to="." method="_on_timer_timeout"]
[connection signal="start_game" from="HUD" to="." method="_on_hud_start_game"]
[connection signal="finished" from="Music" to="." method="_on_music_finished"]
